--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: fastpages
+title: Collection of My Blogs
 description: An easy to use blogging platform with support for Jupyter Notebooks.
 github_username: vsgurung
 # you can comment the below line out if your repo name is not different than your baseurl
@@ -39,8 +39,8 @@ baseurl: "/blogs" # the subpath of your site, e.g. "/blog".
 # Github and twitter are optional:
 minima:
   social_links:
-    twitter: fastdotai
-    github: fastai
+    twitter: Bhootnath_
+    github: vsgurung
 
 # Set this to true to get LaTeX math equation support
 use_math: 
