--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Collection of My Blogs
+title: Collection of Blogs
 description: An easy to use blogging platform with support for Jupyter Notebooks.
 github_username: vsgurung
 # you can comment the below line out if your repo name is not different than your baseurl
